crates/stef-compiler/tests/inputs/validate/struct_named_tuple_empty.stef
struct Sample {
    field: () @1,
}
