crates/stef-compiler/tests/inputs/invalid/struct_gen_dup.stef
struct Sample<T, T> {
    value: T @1,
}
